Added separate svg for checkmark
need to fix placement + add check

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2291,3 +2291,12 @@ $lato: Lato, sans-serif;
         margin-bottom: 5px;
     
     }
+
+    .esign-checkmark{
+        position: absolute;
+        left: 81.17%;
+        right: 14.12%;
+        top: 45.3%;
+        bottom: 51.72%;
+
+    }
