--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2017,6 +2017,10 @@ $lato: Lato, sans-serif;
         box-shadow: 2px 2px 4px 0px $c_shadow;
         margin-top: 5px;
 
+        &__disabled {
+            visibility: hidden;
+        }
+
     }
 
     .gideon-submit-button:hover {
@@ -2309,14 +2313,17 @@ $lato: Lato, sans-serif;
     //testing modal/popup
     .modal {
         position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
-        left: 0;
-        top: 0;
+        z-index: 9999; /* Sit on top */
+        left: 50%;
+        top: 50%;
         width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
+        transform: translate(-50%, -50%);
         background-color: rgb(0,0,0); 
-        background-color: rgba(0,0,0,0.4); 
+        background-color: rgba(0,0,0,0.4);
+        
+        @include mobile {
+            width: 150%;
+        }
       }
       
       /* Modal Content/Box */
@@ -2325,5 +2332,5 @@ $lato: Lato, sans-serif;
         margin: 15% auto; 
         padding: 20px;
         border: 1px solid #888;
-        width: 80%; 
+        width: 50%; 
       }
