--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2345,3 +2345,27 @@ $lato: Lato, sans-serif;
             height: 100%;
         }
       }
+
+      .esign_fullwindow {
+        height: 100%;
+        position: absolute;
+      }
+
+      .esign_topbar {
+        position: absolute;
+        width: 1920px;
+        height: 124px;
+        left: 0px;
+        top: 0px;
+
+        background: rgba(254, 254, 254, 0.9);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        backdrop-filter: blur(5px);
+
+      }
+
+      .esign-topbar-buttons {
+        margin: 0 auto;
+        display: inline;
+        
+      }
