--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2367,8 +2367,7 @@ $lato: Lato, sans-serif;
         width: 100%; /* Full width */
         height: 100%;
         transform: translate(-50%, -50%);
-        background-color: rgb(0,0,0); 
-        background-color: rgba(0,0,0,0.4);
+        background-color: rgb(159,159,159); 
         
        
         width: 100%; /* Full width */
@@ -2378,10 +2377,10 @@ $lato: Lato, sans-serif;
         position: absolute;
         box-sizing: border-box;
         color: #fff;
-        top: 39%;
-        height: 100px;
+        top: 37%;
+        height: 80px;
         width: 100%;
-        background: rgba(254, 254, 254, 0.9);
+        background: rgba(254, 254, 254, 1);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         backdrop-filter: blur(5px); 
         font-weight: 500;
@@ -2445,8 +2444,8 @@ $lato: Lato, sans-serif;
         position: absolute;
         right: 10px;
         top: 26px;
-       width: 160.47px;
-        height: 52px;
+       width: 130px;
+        //height: 52px;
         background-color: #3F6DE1;
          border: 1px solid #3F6DE1;
          border-radius: 3px !important;
@@ -2469,7 +2468,7 @@ $lato: Lato, sans-serif;
       .pdfholder{
         position: absolute;
         top: 330px;
-        width: 100%;
+        width: 101%;
         background: #E9E9E9;
-
+        right: -2px;
       }
