--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2483,7 +2483,7 @@ $lato: Lato, sans-serif;
 
       .pdfholder{
         position: absolute;
-        top: 440px;
+        top: 51%;
         width: 101%;
         background: #E9E9E9;
         right: -2px;
