Adjusted pdf view styling

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2394,7 +2394,7 @@ $lato: Lato, sans-serif;
         box-sizing: border-box;
         color: #fff;
         top: 37%;
-        height: 80px;
+        height: 9%;
         width: 100%;
         background: rgba(254, 254, 254, 1);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -2483,7 +2483,7 @@ $lato: Lato, sans-serif;
 
       .pdfholder{
         position: absolute;
-        top: 51%;
+        top: 46%;
         width: 101%;
         background: #E9E9E9;
         right: -2px;
