Adjusted sign now button

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2459,7 +2459,7 @@ $lato: Lato, sans-serif;
       .gideon-download-button2 {
         position: absolute;
         right: 10px;
-        top: 35px;
+        top: 42%;
        width: 130px;
         //height: 52px;
         background-color: #3F6DE1;
