Removed topbar when sign button is clicked for mobile esign

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2508,6 +2508,20 @@ $lato: Lato, sans-serif;
         }
       }
 
+      .pdfholder-notop{
+        position: absolute;
+        top: 46%;
+        width: 101%;
+        background: #E9E9E9;
+        right: -2px;
+
+        @include mobileAndTablet {
+            height: 63%;
+            top: 45%
+           
+        }
+      }
+
       .mobileview {
         background: #E9E9E9;
         height: 100%;
