--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2495,6 +2495,7 @@ $lato: Lato, sans-serif;
         height: 95%;
         background: #E9E9E9;
         right: -2px;
+        overflow: auto;
 
         @include mobileAndTablet {
             height: 100%;
@@ -2508,12 +2509,13 @@ $lato: Lato, sans-serif;
         top: 46%;
         width: 101%;
         background: #E9E9E9;
-        right: -2px;
+        right: -4px;
         //overflow: auto;
 
         @include mobileAndTablet {
-            height: 200%;
-            width: 100%;
+            height: 100%;
+            width: 85%;
+         
            
         }
       }
