--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2316,11 +2316,11 @@ $lato: Lato, sans-serif;
         flex: 1;
         display: flex;
         position: fixed; /* Stay in place */
-        z-index: 5; /* Sit on top */
+        z-index: 2; /* Sit on top */
        // left: 85%;
-        margin-top: $headerTotalHeight;
+        margin-top: 50px;
         top: 17%;
-        //width: 150%; /* Full width */
+        width: 36%; /* Full width */
         height: 75%;
         transform: translate(-10%, -10%);
         //background-color: rgb(0,0,0); 
