--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2314,15 +2314,15 @@ $lato: Lato, sans-serif;
     //testing modal/popup
     .modal-normal {
         flex: 1;
-        display: flex;
+       // display: flex;
         position: fixed; /* Stay in place */
         z-index: 2; /* Sit on top */
        // left: 85%;
         margin-top: 50px;
         top: 17%;
-        width: 36%; /* Full width */
+        width: 28%; /* Full width */
         height: 75%;
-        transform: translate(-10%, -10%);
+        transform: translate(-11%, -9%);
         //background-color: rgb(0,0,0); 
         //background-color: rgba(0,0,0,0.4);
        // top: 25%;
@@ -2444,7 +2444,7 @@ $lato: Lato, sans-serif;
         margin: 15% auto; 
         padding: 20px;
        // border: 1px solid #888;
-        width: $chatWidth;  
+        width: ($chatWidth)-1;  
         height: 100%;
 
         @include mobile {
