Modified styling for esign card

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2252,12 +2252,44 @@ $lato: Lato, sans-serif;
        padding: 15px 0px 15px 0px;
     }
 
+    .esign-message-handoff-big2 {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 800;
+        font-size: x-large;
+        line-height: 40px;
+        /* or 89% */
+
+        text-align: center;
+        letter-spacing: 0.04em;
+
+        /* Gideon/Primary text */
+
+       color: #262626;
+       padding: 15px 0px 15px 0px;
+    }
+
     .esign-message-handoff-small{
         
         font-family: 'Lato';
         font-style: normal;
         font-weight: 500;
         font-size: medium;
+        line-height: 29px;
+        text-align: center;
+        letter-spacing: 0.03em;
+    
+       /* Gideon/Primary text */
+       color: #262626;
+       padding: 15px 0px 15px 0px;
+    }
+
+    .esign-message-handoff-small{
+        
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 500;
+        font-size: small;
         line-height: 29px;
         text-align: center;
         letter-spacing: 0.03em;
@@ -2694,4 +2726,5 @@ $lato: Lato, sans-serif;
 
       .presign_area {
         width: 50%;
+        padding: 0px 0px 0px 0px !important; 
       }
