--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2003,6 +2003,22 @@ $lato: Lato, sans-serif;
         box-shadow: 2px 2px 4px 0px $c_shadow;
     }
 
+    .gideon-submit-button-download {
+        background-color: #3F6DE1;
+        border: 1px solid #3F6DE1;
+        border-radius: 3px !important;
+        color: #ffffff;
+        min-height: 32px;
+        height: auto;
+        width: 100%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        text-align: center;
+        box-shadow: 2px 2px 4px 0px $c_shadow;
+        text-decoration:none;
+    }
+
     .gideon-submit-button-white {
         background-color: #ffffff !important;
         border: 1px solid  #3F6DE1 !important;
@@ -2742,4 +2758,12 @@ $lato: Lato, sans-serif;
       .presign_area {
         width: 50%;
         padding: 0px 0px 0px 0px !important; 
+      }
+
+      .uploaded-files-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
       }
