--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2757,7 +2757,8 @@ $lato: Lato, sans-serif;
 
       .presign_area {
         width: 50%;
-        padding: 0px 0px 0px 0px !important; 
+        padding: 0px 0px 0px 0px !important;
+        height: 60%; 
       }
 
       .uploaded-files-container {
