Added changes for signature area + after signing card

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2762,9 +2762,17 @@ $lato: Lato, sans-serif;
       }
 
       .uploaded-files-container {
+        margin-top: 10%;
         display: flex;
         justify-content: center;
         align-items: center;
+      }
 
+      .document_area{
+        margin-top: 10%;
+      }
 
+      .submit-area{
+        width: 25%;
+        justify-content: right;
       }
