Styling updates for post sign card

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2300,7 +2300,7 @@ $lato: Lato, sans-serif;
        padding: 15px 0px 15px 0px;
     }
 
-    .esign-message-handoff-small{
+    .esign-message-handoff-small2{
         
         font-family: 'Lato';
         font-style: normal;
@@ -2761,7 +2761,7 @@ $lato: Lato, sans-serif;
       }
 
       .uploaded-files-container {
-        margin-top: 10%;
+        //margin-top: 10%;
         display: flex;
         justify-content: center;
         align-items: center;
