Adjusted text for post sign card

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2272,7 +2272,7 @@ $lato: Lato, sans-serif;
         font-family: 'Lato';
         font-style: normal;
         font-weight: 800;
-        font-size: x-large;
+        font-size: xx-large;
         line-height: 40px;
         /* or 89% */
 
@@ -2305,7 +2305,7 @@ $lato: Lato, sans-serif;
         font-family: 'Lato';
         font-style: normal;
         font-weight: 500;
-        font-size: small;
+        font-size: medium;
         line-height: 29px;
         text-align: center;
         letter-spacing: 0.03em;
