--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2282,7 +2282,7 @@ $lato: Lato, sans-serif;
         /* Gideon/Primary text */
 
        color: #262626;
-       padding: 15px 0px 15px 0px;
+       //padding: 15px 0px 15px 0px;
     }
 
     .esign-message-handoff-small{
@@ -2312,7 +2312,7 @@ $lato: Lato, sans-serif;
     
        /* Gideon/Primary text */
        color: #262626;
-       padding: 15px 0px 15px 0px;
+       //padding: 15px 0px 15px 0px;
     }
     
     
@@ -2769,7 +2769,7 @@ $lato: Lato, sans-serif;
       }
 
       .document_area{
-        margin-top: 10%;
+        margin-top: 5%;
       }
 
       .submit-area{
