--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2306,13 +2306,13 @@ $lato: Lato, sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: medium;
-        line-height: 29px;
+        line-height: 19px;
         text-align: center;
         letter-spacing: 0.03em;
     
        /* Gideon/Primary text */
        color: #262626;
-       //padding: 15px 0px 15px 0px;
+       padding: 15px 0px 15px 0px;
     }
     
     
