--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2330,7 +2330,7 @@ $lato: Lato, sans-serif;
             width: 100%;
             white-space: normal;
             overflow-wrap: break-word;
-            padding: 18px;
+        padding: 18px 18px 18px 0px;
     
     }
     
