--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2364,6 +2364,7 @@ $lato: Lato, sans-serif;
         text-align: center;
         min-height: 32px;
         overflow-wrap: break-word;
+        outline: none;
         
         box-sizing: border-box;
     
@@ -2511,13 +2512,14 @@ $lato: Lato, sans-serif;
         flex: 1;
         display: flex;
         position: fixed; /* Stay in place */
-        z-index: 5; /* Sit on top */
+        z-index: 1; /* Sit on top */
        // left: 85%;
         margin-top: $headerTotalHeight;
-        top: 10%;
+        top: 15%;
         //width: 150%; /* Full width */
         height: 188%;
         transform: translate(-10%, -10%);
+        width: $chatWidth;
         //background-color: rgb(0,0,0); 
         //background-color: rgba(0,0,0,0.4);
        // top: 25%;
@@ -2788,6 +2790,12 @@ $lato: Lato, sans-serif;
         width: 50%;
         padding: 0px 0px 0px 0px !important;
         height: 60%; 
+      }
+
+      .presign_area_full {
+        width: 50%;
+        padding: 0px 0px 0px 0px !important;
+        height: 20%; 
       }
 
       .uploaded-files-container {
