--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2481,13 +2481,14 @@ $lato: Lato, sans-serif;
         flex: 1;
         display: flex;
         position: fixed; /* Stay in place */
-        z-index: 5; /* Sit on top */
+        z-index: 1; /* Sit on top */
        // left: 85%;
         margin-top: $headerTotalHeight;
-        top: 10%;
-        //width: 100%; /* Full width */
+        top: 19%;
+        width: 165%; /* Full width */
         height: 188%;
-        width: 242vw;
+        left: 50%;
+        //width: 242vw;
         transform: translate(-10%, -10%);
         //background-color: rgb(0,0,0); 
         //background-color: rgba(0,0,0,0.4);
@@ -2595,7 +2596,7 @@ $lato: Lato, sans-serif;
         //margin: 15% auto; 
         //padding: 20px;
        // border: 1px solid #888;
-        width: $chatWidth;  
+        width: 80%;  
         height: 100%;
         
 
@@ -2844,4 +2845,14 @@ $lato: Lato, sans-serif;
         width: 15%;
         padding: 18px;
         min-height: 32px;
+      }
+
+      .loading_esign{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 30;
+        background-color: #979999;
       }
