--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2823,9 +2823,10 @@ $lato: Lato, sans-serif;
       }
 
       .presign_area_full {
-        width: 50%;
+        //width: 50%;
         padding: 0px 0px 0px 0px !important;
         height: 20%; 
+        background-size: 50% 100%;
       }
 
       .uploaded-files-container {
@@ -2861,10 +2862,33 @@ $lato: Lato, sans-serif;
 
       .loading_esign{
         position: fixed;
-        top: 0;
+        top: 46%;
         left: 0;
         right: 0;
         bottom: 0;
         z-index: 30;
+        height: 100%;
         background-color: #979999;
+        opacity: 0.5;
+       
+      }
+
+      .loaderwheel_esign{
+        border: 16px solid #f3f3f3; /* Light grey */
+        border-top: 16px solid #3498db; /* Blue */
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+        z-index: 30;
+        background-color: #979999;
+        left: 50%;
+        position: absolute;
+        top: 30%
+
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
       }
