--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2302,7 +2302,11 @@ $lato: Lato, sans-serif;
         /* Gideon/Primary text */
 
        color: #262626;
-       //padding: 15px 0px 15px 0px;
+    //padding: 15px 0px 15px 0px;
+
+    @include mobileAndTablet{
+        padding: 20px 0px 15px 0px;
+    }
     }
 
     .esign-message-handoff-small{
@@ -2319,8 +2323,8 @@ $lato: Lato, sans-serif;
        color: #262626;
        padding: 15px 0px 15px 0px;
 
-       @include mobile {
-        padding-bottom: 50px;
+       @include mobileAndTablet {
+        padding-bottom: 30px;
         padding-top: 50px
        }
     }
@@ -2338,6 +2342,11 @@ $lato: Lato, sans-serif;
        /* Gideon/Primary text */
        color: #262626;
        padding: 15px 0px 15px 0px;
+
+       @include mobileAndTablet {
+        padding-bottom: 50px;
+        padding-top: 50px
+       }
     }
     
     
@@ -2467,7 +2476,7 @@ $lato: Lato, sans-serif;
             min-width: 100%;
         }
         
-        @include mobile {
+        @include mobileAndTablet {
             background-color: white;
             width: 150%;
             z-index: 1;
@@ -2501,7 +2510,7 @@ $lato: Lato, sans-serif;
        // top: 25%;
            // transform: translateY(-$actionsHeight);
         
-        @include mobile {
+        @include mobileAndTablet {
             width: 150%;
             z-index: 1;
         }
@@ -2533,7 +2542,7 @@ $lato: Lato, sans-serif;
        // top: 25%;
            // transform: translateY(-$actionsHeight);
         
-        @include mobile {
+        @include mobileAndTablet {
             width: 150%;
             z-index: 1;
         }
@@ -2558,7 +2567,7 @@ $lato: Lato, sans-serif;
         //background-color: rgb(0,0,0); 
         //background-color: rgba(0,0,0,0.4);
         
-        @include mobile {
+        @include mobileAndTablet {
             width: 150%;
             z-index: 1;
         }
@@ -2575,7 +2584,7 @@ $lato: Lato, sans-serif;
         background-color: rgb(0,0,0); 
         background-color: rgba(0,0,0,0.4);
         
-        @include mobile {
+        @include mobileAndTablet {
             width: 150%;
             z-index: 1;
         }
@@ -2590,7 +2599,7 @@ $lato: Lato, sans-serif;
        // width: ($chatWidth)-1;  
         height: 100%;
 
-        @include mobile {
+        @include mobileAndTablet {
             width: 100%;
             height: 10%;
             background-color: white;
@@ -2607,7 +2616,7 @@ $lato: Lato, sans-serif;
         height: 100%;
         
 
-        @include mobile {
+        @include mobileAndTablet {
             width: 100%;
             padding: 100% 20px 100% 20px;
         }
@@ -2622,7 +2631,7 @@ $lato: Lato, sans-serif;
        // width: ($chatWidth)-1;  
         //height: 100%;
 
-        @include mobile {
+        @include mobileAndTablet {
             width: 100%;
           
         }
@@ -2637,7 +2646,7 @@ $lato: Lato, sans-serif;
         height: 100%;
         
 
-        @include mobile {
+        @include mobileAndTablet {
             width: 100%;
             height: 100%;
         }
@@ -2658,7 +2667,7 @@ $lato: Lato, sans-serif;
        
         width: 100%; /* Full width */
 
-        @include mobile {
+        @include mobileAndTablet {
             width: 101%;
         }
       }
@@ -2839,6 +2848,10 @@ $lato: Lato, sans-serif;
 
       .document_area{
         margin-top: 5%;
+
+        @include mobileAndTablet{
+            margin-top: 20%;
+        }
       }
 
       .submit-area{
