--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2390,6 +2390,28 @@ $lato: Lato, sans-serif;
         margin-left: 10%;
     }
     
+    .esign-initial-box {
+        
+        height: 53px;
+        width: 20%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        text-align: center;
+        min-height: 32px;
+        overflow-wrap: break-word;
+        outline: none;
+        
+        box-sizing: border-box;
+    
+        //width: 511px;
+        //height: 50px;
+        background: #FEFEFE;
+        border: 1px solid #DCDCDC;
+        //margin-bottom: 5px;
+        margin-left: 10%;
+    }
+
     .esign-grey-text {
         font-family: 'Lato';
         font-style: normal;
