--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2365,7 +2365,10 @@ $lato: Lato, sans-serif;
             white-space: normal;
             overflow-wrap: break-word;
        // padding: 18px 18px 18px 0px;
-    
+        
+       @include mobile {
+        background-color: white;
+       }
     }
     
     .esign-input-box {
@@ -2650,7 +2653,6 @@ $lato: Lato, sans-serif;
         background-color: #fefefe;
         margin: 15% auto; 
         padding: 20px;
-        border: 1px solid #888;
        // width: ($chatWidth)-1;  
         //height: 100%;
 
@@ -2802,7 +2804,7 @@ $lato: Lato, sans-serif;
         @include mobileAndTablet {
             height: 100%;
            top: 49%;
-           width: 100%;
+           width: 101%;
         }
       }
 
@@ -2815,10 +2817,7 @@ $lato: Lato, sans-serif;
         overflow: auto;
 
         @include mobileAndTablet {
-            height: 85%;
-            width: 100%;
-         
-           
+            height: 95%;
         }
       }
 
@@ -2894,6 +2893,10 @@ $lato: Lato, sans-serif;
         width: 20%;
         padding: 18px;
         min-height: 32px;
+        
+        @include mobile {
+            width: 100%;
+        }
       }
 
       .loading_esign{
